--- a/arras.html
+++ b/arras.html
@@ -32,6 +32,7 @@
             for(var i=ar.length-2;i>=0;i--){
                 console.log(ar[i])
             }
+            var ar=[]
 
     </script>
 </body>
