--- a/arras.html
+++ b/arras.html
@@ -28,11 +28,81 @@
         //     console.log(ar[i])
         //   }
 
-            var ar=[23,34,54,0,4,7];
-            for(var i=ar.length-2;i>=0;i--){
-                console.log(ar[i])
-            }
-            var ar=[]
+            // var ar=[23,34,54,0,4,7];
+            // for(var i=ar.length-1;i>=1;i--){
+            //     console.log(ar[i])
+            // }
+
+
+            // print only the last four elements of the given arrar
+            // var ar=[23,34,54,0,4,7]
+            // for(i=ar.length-4;i<=ar.length-1;i++){
+            //     console.log(ar[i])
+            // }
+
+
+            // // greater than 20
+            // var ar=[23,34,54,10,4,7]
+            // for(var i=0;i<=ar.length-1;i++){
+            //     if(ar[i]>20){
+            //         console.log(ar[i])
+            //     }
+            // }
+
+
+            //even numbers
+            // var ar=[23,34,54,10,4,7]
+            // for(var i=0;i<=ar.length-1;i++){
+            //     if(ar[i]%2==0){
+            //         console.log(ar[i])
+            //     }
+            // }
+
+            // odd numbers 
+            // var ar=[23,34,54,10,4,7]
+            // for(var i=0;i<=ar.length-1;i++){
+            //     if(ar[i]%2==1){
+            //         console.log(ar[i])
+            //     }
+            // }
+
+            // positive numbers
+            // var ar=[23,-34,-54,10,-4,7]
+            // for(var i=0;i<=ar.length-1;i++){
+            //     if(ar[i]>0){
+            //         console.log(ar[i])
+            //     }
+            // }
+
+            // negative numbers
+            // var ar=[23,-34,-54,10,-4,7]
+            // for(var i=0;ar.length-1;i++){
+            //     if(ar[i]<0){
+            //         console.log(ar[i])
+            //     }
+            // }
+
+
+            // two digits numbers
+
+            // var ar=[1,23,45,6,7,34]
+            // for(var i=0;i<=ar.length-1;i++){
+            //     if(ar[i]<=99&&ar[i]>=10){
+            //         console.log(ar[i])
+            //     }
+            // }
+
+
+            // multiplies of 3&5
+
+            // var ar=[30,6,20,15,9,60]
+            // for(var i=0;i<=ar.length-1;i++){
+            //     if(ar[i]%3==0&&ar[i]%5==0){
+            //         console.log(ar[i])
+            //     }
+            // }
+
+            
 
     </script>
 </body>
