--- a/Oops/Hoisting.html
+++ b/Oops/Hoisting.html
@@ -41,6 +41,11 @@
         }
         // console.log(a)   
         xyz()
+
+        function eee(){
+            var a=10
+        }
+        console.log(typeof(eee))
        
     </script>
 </body>
