--- a/Practice/group.html
+++ b/Practice/group.html
@@ -57,7 +57,7 @@
 
                         const result=Object.groupBy(products,({type})=>type)
                         console.log(result)
-                        console.log(result.HardGood)
+                        // console.log(result.HardGood)
     </script>
 </body>
 </html>
